// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetching.gqlConnection should fetch the whole connection in chunks 1`] = `
Array [
  Object {
    "loc": "bla",
  },
]
`;

exports[`fetching.gqlConnection should fetch the whole connection in chunks 2`] = `
Array [
  Object {
    "loc": "blerb",
  },
]
`;
